# local-rag-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
data/sample/aars/: aar_001_llab_2025-09-12.md  aar_002_llab_2025-09-26.md  aar_003_dining_out_2025-10-04.md  aar_004_recruiting_event_2025-09-18.md  aar_005_pft_2025-09-30.md  aar_006_llab_2025-10-10.md  aar_007_warrior_day_2025-10-17.md
data/sample/messages/: msg_thread_001_uniform_question.md  msg_thread_002_llab_reschedule.md  msg_thread_003_pft_signup.md
data/sample/oporders/: opord_001_fall_semester_2025.md  opord_002_week_of_2025-10-13.md  opord_003_dining_out_planning.md
data/sample/sops/: sop_001_uniform_standards.md  sop_002_pt_test_procedures.md  sop_003_llab_conduct.md  sop_004_leave_requests.md  sop_005_warrior_knowledge.md  sop_006_drill_evaluation.md  sop_007_field_training_prep.md
scripts/: benchmarks.py  test_stores.py
src/: config.py
src/ingestion/: loader.py
src/stores/: documents.py  graph.py  vectors.py
